force-app/main/default/objects/Teams_Notification_Config__mdt/Teams_Notification_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for MS Teams webhook notifications triggered by Salesforce record changes.</description>
    <label>Teams Notification Config</label>
    <pluralLabel>Teams Notification Configs</pluralLabel>
</CustomObject>