force-app/main/default/objects/Teams_Notification_Config__mdt/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <description>Conditions that must be met to send the notification. Each line is a condition in format: FieldName OPERATOR Value. Multiple conditions are AND'd together. Leave blank to always send. Operators: EQUALS, NOT_EQUALS, CHANGED, CHANGED_TO, CHANGED_FROM, CONTAINS, IN, NOT_IN, IS_BLANK, IS_NOT_BLANK, GREATER_THAN, LESS_THAN.</description>
    <label>Conditions</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>