force-app/main/default/objects/Teams_Notification_Config__mdt/fields/Custom_Card_Payload__c.field-meta.xml
<CustomField>
    <fullName>Custom_Card_Payload__c</fullName>
    <description>Custom Adaptive Card JSON payload template. Use merge fields like {!Name}, {!Id}, {!RecordUrl}, {!ActionType}, {!ObjectName}, {!Timestamp} to insert dynamic values. If blank, the default card format is used.</description>
    <label>Custom Card Payload</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>