force-app/main/default/objects/Teams_Notification_Config__mdt/fields/Fields_To_Display__c.field-meta.xml
<CustomField>
    <fullName>Fields_To_Display__c</fullName>
    <description>Comma-separated list of field API names to include in the Teams notification (e.g., Name,Amount,StageName).</description>
    <label>Fields To Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>