force-app/main/default/objects/Teams_Notification_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When enabled, this notification configuration is active and will send notifications.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>