force-app/main/default/objects/Teams_Notification_Config__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>The API name of the Salesforce object to monitor (e.g., Account, Opportunity, Case).</description>
    <label>Object API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>