force-app/main/default/objects/Teams_Notification_Config__mdt/fields/Trigger_On_Delete__c.field-meta.xml
<CustomField>
    <fullName>Trigger_On_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, sends a notification when a record is deleted.</description>
    <label>Trigger On Delete</label>
    <type>Checkbox</type>
</CustomField>