force-app/main/default/objects/Teams_Notification_Config__mdt/fields/Trigger_On_Update__c.field-meta.xml
<CustomField>
    <fullName>Trigger_On_Update__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When enabled, sends a notification when a record is updated.</description>
    <label>Trigger On Update</label>
    <type>Checkbox</type>
</CustomField>