force-app/main/default/objects/Teams_Notification_Config__mdt/fields/Webhook_URL__c.field-meta.xml
<CustomField>
    <fullName>Webhook_URL__c</fullName>
    <description>The Microsoft Teams incoming webhook URL for this notification configuration. For longer URLs (Power Automate), use Webhook_URL_Long__c instead.</description>
    <label>Webhook URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>