force-app/main/default/objects/Teams_Notification_Config__mdt/fields/Webhook_URL_Long__c.field-meta.xml
<CustomField>
    <fullName>Webhook_URL_Long__c</fullName>
    <description>Long webhook URL field for Power Automate or other URLs exceeding 255 characters. Takes precedence over Webhook_URL__c if populated.</description>
    <label>Webhook URL (Long)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>